# personal-finance-agent

./: .coverage  .env.example  .env.local  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  MVP-Initialy.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: validation-engine.md
evals/: pfip_evaluator.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: create_local_dev_user.py  demo_script.md  migrate.py  package_lambdas.sh  quick_reset.py  reset_database.py  run_api_local.py  run_mcp_local.py  seed_demo.py  seed_lambda_handler.py  seed_via_api.sh  update_lambda_env.sh
src/auth_api/: handler.py
src/expense_agent/: categorizer.py  handler.py  models.py
src/income_agent/: __init__.py  handler.py  models.py
src/insights_agent/: context_builder.py  handler.py  judge.py  models.py
src/mcp_server/: handler.py  simple_handler.py
src/metrics_agent/: handler.py
src/pfip_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reset_agent/: handler.py
src/savings_agent/: calculator.py  handler.py  models.py
src/shared/: accuracy_tracker.py  auth.py  cors.py  db.py  exceptions.py  llm.py  logger.py  metrics_tracker.py  validation.py
tests/unit/: test_auth.py  test_auth_api.py  test_expense_agent.py  test_income_agent.py  test_insights_agent.py  (+3 more)
(+28 files in other folders)
