[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfip-mvp"
version = "0.1.0"
description = "Personal Financial Intelligence Platform MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "mangum>=0.17.0",
    "pydantic>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "aws-lambda-powertools>=2.35.0",
    "python-jose[cryptography]>=3.3.0",
    "mcp>=1.0.0",
    "bcrypt>=4.1.0",
    "requests>=2.31.0",
    "cerebras-cloud-sdk>=1.0.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]
